<resources>
    <string name="app_name">PandemicHelper</string>
    <!-- Strings related to login -->
    <string name="labor_monitor">Labour Monitor</string>
    <string name="youtube">Youtube</string>
    <string name="todo">Image Not Found</string>
    <string name="toll_free_numbers">Toll Free</string>
    <string name="health_care">Locations</string>
    <string name="first_responders">SOS</string>
    <string name="donate">Donate</string>
    <string name="volunteer">Volunteer</string>
    <string name="text_label_2">Medicals</string>
    <string name="text_label_1">Hospitals</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hospital_fragment">Hello Hospital fragment</string>
    <string name="medicals_fragment">Hello Medicals fragment</string>
    <string name="assign">Assign</string>
    <string name="work">"Work : "</string>
    <string name="desc">"Description : "</string>
    <string name="noof">No of Workers Needed : </string>
    <string name="phone">"Contact : "</string>
    <string name="status">"Status : "</string>
    <string name="dept">DEPT</string>
    <string name="addVolunteer">Add Volunteer</string>
    <string name="text_label_3">Health Care</string>
    <string name="text_label_4">Labs</string>
    <string name="epass">E-Pass</string>
    <string name="geo">Geofences</string>
    <string name="text_label_5">Shelters</string>
    <string name="avail">Available</string>
    <string name="availNot">Not Available</string>
    <string name="noOfPatients">Patients Limit</string>
    <string name="time">Choose Your Time</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="patients">Patients</string>
    <string name="profile">Profile</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="doctor">Doctors</string>
    <string name="appoint">Make Appoinment</string>
    <string name="name">Name : </string>
    <string name="email">Email : </string>
    <string name="money">Fund Donation</string>
    <string name="material">Relief Materials</string>
    <string name="or">Or</string>
    <string name="click_here_to_handover_the_materials_to_a_volunteer">Click here\nto handover the\nmaterials\nto a Volunteer</string>
    <string name="click_here_to_handover_the_materials_in_a_relief_material_center">Click here\nto handover\nthe materials in\na Relief Material\nCenter</string>
    <string name="toiletries">"Toiletries "</string>
    <string name="fooditems">Food items</string>
    <string name="clothes">Clothes</string>
    <string name="Sanitation">Sanitation</string>
    <string name="Stationery">Stationery</string>
    <string name="Medicines">Medicines</string>
    <string name="category">Select Category</string>
    <string name="submit">Submit</string>
    <string name="eserv">eServices</string>
    <string name="courses">Courses</string>
    <string name="news">News</string>
    <string name="changephoto">Change Photo</string>
    <string name="edit">Edit</string>
    <string name="time2">Your Timing</string>
    <string name="cancel">Cancel</string>
    <string name="changeDetails">Change Details</string>
    <string name="toogle">Turn on to show Patients that you will be available today.</string>
    <string name="toogleNeg">Turn off to show Patients that you will not be available today.</string>
    <string name="register">Register</string>
    <string name="speciality">Speciality</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="emailHint">Email</string>
    <string name="nameHint">Name</string>
    <string name="login">Login</string>
    <string name="new_user_click_to_register">New User? Click to Register.</string>
    <string name="enter_your_email_and_password_n_to_get_started">Enter Your Email and Password \n to get started</string>
    <string name="filter">Filter</string>
    <string name="completed">Completed</string>
    <string name="notCompleted">Not Completed</string>
    <string name="assigned">Assigned</string>
    <string name="notAssigned">Not Assigned</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="personal_pass">Personal Transport Pass Request</string>
    <string name="est_pass">Essential Service Transport Pass Request</string>
    <string name="pincode">Pincode</string>

    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="id">Id Type</string>
    <string name="choose">Choose File</string>
    <string name="copy_of_id_proof_selected">Copy of Id Proof Selected</string>
    <string name="idNo">Id Proof Number</string>
    <string name="noOfPass">No of Passengers</string>
    <string name="vehicleNo">Vehicle Number</string>
    <string name="format">Format : TN 00 XX 1111</string>
    <string name="choose_proof_for_reason">Choose Proof for Reason</string>
    <string name="travel_date">Travel Date</string>
    <string name="select_from_location">Select From Location</string>
    <string name="select_to_location">Select To Location</string>
    <string name="organisationName">Organisation Name</string>
    <string name="choose_proof_for_organisation">Choose Proof for Organisation Type Selected</string>
    <string name="applicantNameHint">Applicant Name</string>
    <string name="noOfEmployees">No of Employees in the Organisation</string>
    <string name="organisationType">Organisation Type</string>
    <string name="organisationCat">Organisation Category</string>
    <string name="orAddress">Organisation Address</string>
    <string name="noOfVehicles">No of Vehicles Required</string>
    <string name="unorg_worker">If you\'re an unorganised worker and need support</string>
    <string name="support_to_unorganised_workers">Support to Unorganised Workers</string>
    <string name="support_for_orphans_and_vulnerable_category">Support for Orphans and Vulnerable Category</string>
    <string name="counselling_for_patients_and_family">Counselling for Patients and Family</string>
    <string name="support_for_patients">Support For Patients</string>
    <string name="food_for_isolated_patients">Food for isolated Patients</string>
    <string name="call_to_order">Call to Order</string>
    <string name="_9876543210">9876543210</string>
    <string name="send_a_request_via_app">Send a request via App</string>
    <string name="set_alarm_for_taking_tablets">Set Alarm for Taking Medicines</string>
    <string name="call_to_request">Call to Request</string>
    <string name="home_treatment">Home Treatment</string>
    <string name="symptoms">Symptoms</string>
    <string name="Cause">Cause</string>
    <string name="disease">Disease</string>
    <string name="noOfPersons">No of Persons</string>
    <string name="request">Request</string>
    <string name="select_location">Select Location</string>
    <string name="reqfood">Enter details for Food Request</string>
    <string name="reqMed">Enter details for Home Treatment Request</string>
    <string name="enter_work_details">Enter Work Details</string>
    <string name="noOfLabours">Number of Workers Required</string>
    <string name="if_you_are_an_unorganised_sector_worker_and_need_help_click_here">If you are an unorganised sector worker and need help, Click Here</string>
    <string name="workName">Work Name</string>
    <string name="counselling_videos">Counselling videos</string>
    <string name="psychiatrist">Psychiatrist</string>
    <string name="counsellor_council_of_india">Counsellor Council of India</string>
    <string name="nearby_orphanages">Nearby Orphanages</string>
    <string name="indian_orphanage">Indian Orphanage</string>
    <string name="adopt">Adopt Orphans</string>
    <string name="vulnerable_cat">Vulnerable Category Shelters</string>
    <string name="msme_store">MSME Store</string>
    <string name="hospital">Hospital Admission</string>
    <string name="view_history">View History</string>
    <string-array name="role">
        <item>Select Your Role</item>
        <item>Essential Worker</item>
        <item>User</item>
        <item>Doctor</item>
        <item>Labour</item>
        <item>Volunteer</item>
        <item>Unorganised Worker</item>
        <item>Health Worker</item>
    </string-array>

    <string-array name="gender">
        <item>Select Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="idType">
        <item>Select Id Proof Type</item>
        <item>Aadhar Card</item>
        <item>Pan Card</item>
        <item>Driving License</item>
        <item>Passport</item>
        <item>Ration Card</item>
    </string-array>

    <string-array name="reason">
        <item>Select Reason For Travel</item>
        <item>Marriage</item>
        <item>Medical Emergency</item>
        <item>Death</item>
    </string-array>

    <string-array name="vehicle_type">
        <item>Select Vehicle Type</item>
        <item>Car (Max : Driver + 3)</item>
        <item>Suv (Max : Driver + 4)</item>
        <item>Van (Max : Driver + 7)</item>
    </string-array>

    <string-array name="oRProofType">
        <item>Select Organisation Proof Type</item>
        <item>Udyog Aadhar</item>
        <item>GST Certificate</item>
        <item>RoC Registration Certificate</item>
    </string-array>
    <string name="title_activity_admin_from_maps">Map</string>
    <string name="title_activity_orphanage">Map</string>
    <string name="work_you_do">Work you do</string>
    <string name="worker_details">Worker Details</string>
    <string name="title_activity_worker_work_maps">Map</string>
    <string name="worker_name">Worker Name</string>
    <string name="location">Location</string>
    <string name="workers">Workers</string>
    <string name="select_collection_location">Select Collection Location</string>
    <string name="items">Items</string>
    <string name="orProofNo">Organisation Proof Number</string>
    <string name="select_volunteer">Select Volunteer</string>
    <string name="viewLocation">View Location</string>
    <string name="forgot">Forgot Password?</string>
    <string name="please_verify_your_mail_to_get_started">Please Verify your mail to\nGet Started</string>
    <string name="lockdown_clinic">Lockdown Clinic</string>

</resources>
