<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DocProfileFragment"
    android:padding="@dimen/padding">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:id="@+id/doc3"
        android:textSize="@dimen/tsize3"
        android:layout_marginTop="@dimen/mTop" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:id="@+id/docName"
        android:layout_below="@+id/doc3"
        android:textSize="@dimen/tsize2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:layout_marginTop="@dimen/mTop"
        android:layout_below="@+id/docName"
        android:id="@+id/doc1"
        android:textSize="@dimen/tsize3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:id="@+id/docPhone"
        android:layout_below="@+id/doc1"
        android:textSize="@dimen/tsize2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_below="@+id/docPhone"
        android:id="@+id/doc2"
        android:layout_marginTop="@dimen/mTop"
        android:textSize="@dimen/tsize3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:id="@+id/docEmail"
        android:layout_below="@+id/doc2"
        android:textSize="@dimen/tsize2" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.PandemicHelper.Button"
        android:layout_alignParentBottom="true"
        android:text="@string/appoint"
        android:id="@+id/appoint" />

</RelativeLayout>