<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Relief_items"
    android:padding="@dimen/text_margin">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:id="@+id/doc3"
        android:textSize="@dimen/tsize3"
        android:layout_marginTop="@dimen/mTop"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:id="@+id/itemName"
        android:layout_below="@+id/doc3"
        android:textSize="@dimen/tsize2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:layout_marginTop="@dimen/mTop"
        android:layout_below="@+id/itemName"
        android:id="@+id/doc1"
        android:textSize="@dimen/tsize3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:id="@+id/itemPhone"
        android:layout_below="@+id/doc1"
        android:textSize="@dimen/tsize2" />

    <TextView
        android:id="@+id/item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/itemPhone"
        android:layout_marginTop="@dimen/text_margin"
        android:textStyle="bold"
        android:text="@string/items"
        android:textSize="@dimen/tsize2" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ItemList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/item"
        android:layout_marginTop="@dimen/text_margin"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/iBtn"
        style="@style/Widget.PandemicHelper.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/select_volunteer" />

</RelativeLayout>