<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/text_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/tsize3"
            android:text="@string/work" />

        <Spinner
            android:id="@+id/vehicle_spinner"
            android:layout_width="match_parent"
            android:layout_height="@dimen/imgSize"
            android:entries="@array/vehicle_type" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/vehicleNo"
            style="@style/Widget.PandemicHelper.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:helperText="@string/format">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/vehicleNo" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>